#  Process this file with automake to produce Makefile.in

include $(top_srcdir)/Makefile.common

noinst_LIBRARIES = libgwen.a
libgwen_a_SOURCES = \
	Anim.cpp \
	BaseRender.cpp \
	DragAndDrop.cpp \
	events.cpp \
	Gwen.cpp \
	Hook.cpp \
	inputhandler.cpp \
	Skin.cpp \
	ToolTip.cpp \
	Utility.cpp \
	Controls/Base.cpp \
	Controls/Button.cpp \
	Controls/Canvas.cpp \
	Controls/CheckBox.cpp \
	Controls/CollapsibleCategory.cpp \
	Controls/ColorControls.cpp \
	Controls/ColorPicker.cpp \
	Controls/ComboBox.cpp \
	Controls/CrossSplitter.cpp \
	Controls/DockBase.cpp \
	Controls/DockedTabControl.cpp \
	Controls/Dragger.cpp \
	Controls/GroupBox.cpp \
	Controls/HorizontalScrollBar.cpp \
	Controls/HorizontalSlider.cpp \
	Controls/HSVColorPicker.cpp \
	Controls/ImagePanel.cpp \
	Controls/LabelClickable.cpp \
	Controls/Label.cpp \
	Controls/ListBox.cpp \
	Controls/Menu.cpp \
	Controls/MenuItem.cpp \
	Controls/MenuStrip.cpp \
	Controls/NumericUpDown.cpp \
	Controls/ProgressBar.cpp \
	Controls/Properties.cpp \
	Controls/RadioButtonController.cpp \
	Controls/RadioButton.cpp \
	Controls/ResizableControl.cpp \
	Controls/Resizer.cpp \
	Controls/RichLabel.cpp \
	Controls/ScrollBarBar.cpp \
	Controls/ScrollBarButton.cpp \
	Controls/ScrollBar.cpp \
	Controls/ScrollControl.cpp \
	Controls/Slider.cpp \
	Controls/SplitterBar.cpp \
	Controls/TabButton.cpp \
	Controls/TabControl.cpp \
	Controls/TabStrip.cpp \
	Controls/TextBox.cpp \
	Controls/TextBoxNumeric.cpp \
	Controls/Text.cpp \
	Controls/TreeControl.cpp \
	Controls/TreeNode.cpp \
	Controls/VerticalScrollBar.cpp \
	Controls/VerticalSlider.cpp \
	Controls/WindowControl.cpp \
	Controls/Dialog/FileOpen.cpp \
	Controls/Dialog/FileSave.cpp \
	Controls/Dialog/Query.cpp

INCLUDES = -I../include
